@@ -5,11 +5,13 @@
 - Fixed the Isotope filtering using the Packery Library
 - Changed the names of the Google Font Classes
 - Stoped the page banner from showing on the Homepage if the Reading settings are set to show a static page. 
+- Fixed the banner class for the body tag, no longer show up on all pages.
 ### Updated
 - Isotope jQuery Library 2.1.1
 ### Added
 - Packery jQuery Library 1.1.1
 - WordPress Customizer options for controlling the layout of the header
+- Added in a filter 'lsx_allowed_post_type_banners' so child themes can add banner support for additional post types.
 
 
 ## [1.1] - 2015-02-19
